samples/_failures_safe/1761436932_dd80e8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0fa97158.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_0fa97158.c:132:9: error: expected declaration or statement at end of input
  132 |         printf("No entries found\n");
      |         ^~~~~~
./samples/SAFE/__tmp_0fa97158.c:132:9: error: expected declaration or statement at end of input
